Update CODEOWNERS email to GitHub username

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
 # CODEOWNERS file
 # This file designates code owners for this repository.
 # Format: path pattern  @github-username
-* @kaushiknatua12345@gmail.com
+* @kaushiknatua12345
